--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Challenge-2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Challenge-2.data.br",
-        frameworkUrl: buildUrl + "/Challenge-2.framework.js.br",
-        codeUrl: buildUrl + "/Challenge-2.wasm.br",
+        dataUrl: buildUrl + "/Challenge-2.data",
+        frameworkUrl: buildUrl + "/Challenge-2.framework.js",
+        codeUrl: buildUrl + "/Challenge-2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Challenge-2",
